[package]
name = "lic"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.15.1"
clap = { version = "4.5.3", features = ["derive"] }
lazy_static = "1.4.0"
rusqlite = "0.31.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["net", "macros", "rt", "rt-multi-thread"] }
